# backend_sito_starpi

./: .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  init-db.sh  nginx.conf  test.html  utenti_newsletter.txt
admin/: index.html
database/: db.env
database/backups/: 01-04-2026.backup  20-03-2026.sql  23-03-2026.sql  26-03-2026.backup  30-03-2026.backup  il_mio_super_backup.backup  latest.backup
database/migrations/: 0001_news_table.sql
foto/teams/2025/: Alberto Corbacella 2025.heic  Leonardo Stefanini 2025.heic  Matteo Trastulli 2025.heic
src/: cached_page.rs  main.rs  server.rs  server_utils.rs  test_server.rs
src/server_utils/: database.rs  env.rs  file_handler.rs  http_response.rs  news_letter_substription.rs  post_request_data.rs  request_data.rs  thread_pool.rs
utente/: index.html
utente/assets/: index-CXsVeu7P.css  index-Cudw-WGs.js
