[package]
name = "test_server_starpi_nolibs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version="1.50.0", features = ["full"]}
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid"] }
anyhow = "*"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
httparse = "1.10.1"
serde = "1.0.228"
serde_urlencoded = "0.7.1"